page-items-margin spacing calculation fix

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -176,7 +176,7 @@ $text-indent: 1em;
 	}
 }
 @mixin page-items-margin($offset: 0px) {
-	--spacing: calc(var(--page-items-margin) + $offset);
+	--spacing: calc(var(--page-items-margin) + #{$offset});
 	@extend %items-spacing;
 }
 // #endregion
